fixed image carousel images cutting off bug

--- a/src/AppComponenets/LandPlotSelectFolder/LandPlotSelect.css
+++ b/src/AppComponenets/LandPlotSelectFolder/LandPlotSelect.css
@@ -7,6 +7,7 @@
 .swiper_container {
   height: 100%;
   display: flex !important;
+  width: 700px;
 }
 .swiper-slide {
   position: relative;
